[gd_scene load_steps=6 format=3 uid="uid://bev52fkl4fjf3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_a1nvv"]
[ext_resource type="LabelSettings" uid="uid://balgng1bimial" path="res://Fonts/24p font.tres" id="2_4q2cq"]
[ext_resource type="Texture2D" uid="uid://btp6rhn2gxqr7" path="res://Textures/Icons/Languages menu.png" id="3_4bkuu"]
[ext_resource type="PackedScene" uid="uid://dj2nhlk6rq5ja" path="res://UI/options.tscn" id="3_c44ys"]
[ext_resource type="AudioStream" uid="uid://dtjdjterkna57" path="res://Music/Friday Afternoon Loop.ogg" id="3_e866i"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1nvv")

[node name="Game Name" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 72.0
text = "Mark versus Paul"

[node name="Main Developer" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 992.0
offset_bottom = 136.0
text = "Main Developer: xolatgames"
label_settings = ExtResource("2_4q2cq")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start the Game" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 32.0
offset_top = 288.0
offset_right = 480.0
offset_bottom = 352.0
mouse_default_cursor_shape = 2
text = "Start the Game"
alignment = 0

[node name="Continue" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 32.0
offset_top = 352.0
offset_right = 480.0
offset_bottom = 416.0
mouse_default_cursor_shape = 2
text = "Continue"
alignment = 0

[node name="Options" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 32.0
offset_top = 416.0
offset_right = 480.0
offset_bottom = 480.0
mouse_default_cursor_shape = 2
text = "Options"
alignment = 0

[node name="Developers" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 32.0
offset_top = 480.0
offset_right = 480.0
offset_bottom = 544.0
mouse_default_cursor_shape = 2
text = "Developers"
alignment = 0

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 32.0
offset_top = 544.0
offset_right = 480.0
offset_bottom = 608.0
mouse_default_cursor_shape = 2
text = "Quit"
alignment = 0

[node name="Social" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameJolt" type="Button" parent="Social"]
layout_mode = 0
offset_left = 544.0
offset_top = 352.0
offset_right = 992.0
offset_bottom = 416.0
mouse_default_cursor_shape = 2
text = "GameJolt"
alignment = 2

[node name="Itch_io" type="Button" parent="Social"]
layout_mode = 0
offset_left = 544.0
offset_top = 416.0
offset_right = 992.0
offset_bottom = 480.0
mouse_default_cursor_shape = 2
text = "Itch.io"
alignment = 2

[node name="GitHub" type="Button" parent="Social"]
layout_mode = 0
offset_left = 544.0
offset_top = 480.0
offset_right = 992.0
offset_bottom = 544.0
mouse_default_cursor_shape = 2
text = "GitHub"
alignment = 2

[node name="Blogger" type="Button" parent="Social"]
layout_mode = 0
offset_left = 544.0
offset_top = 544.0
offset_right = 992.0
offset_bottom = 608.0
mouse_default_cursor_shape = 2
text = "Blogger"
alignment = 2

[node name="Languages" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 96.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_4bkuu")
ignore_texture_size = true
stretch_mode = 0

[node name="Options" parent="." instance=ExtResource("3_c44ys")]
layout_mode = 0
anchors_preset = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 960.0
offset_bottom = 576.0

[node name="Developers" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 608.0

[node name="Label" type="Label" parent="Developers"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 896.0
offset_bottom = 96.0
text = "Thanks for Developing:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main Developers" type="Control" parent="Developers"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Developers/Main Developers"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 896.0
offset_bottom = 133.0
text = "Main Developer:"
label_settings = ExtResource("2_4q2cq")

[node name="#1" type="Label" parent="Developers/Main Developers"]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 864.0
offset_bottom = 160.0
text = "xolatgames"
label_settings = ExtResource("2_4q2cq")

[node name="Music" type="Control" parent="Developers"]
anchors_preset = 0
offset_top = 96.0
offset_right = 40.0
offset_bottom = 136.0

[node name="Label" type="Label" parent="Developers/Music"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 896.0
offset_bottom = 133.0
text = "Music:"
label_settings = ExtResource("2_4q2cq")

[node name="#1" type="Button" parent="Developers/Music"]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 480.0
offset_bottom = 168.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "by timbeek.com"
alignment = 0

[node name="Sounds" type="Control" parent="Developers"]
anchors_preset = 0
offset_top = 192.0
offset_right = 40.0
offset_bottom = 232.0

[node name="Label" type="Label" parent="Developers/Sounds"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 896.0
offset_bottom = 133.0
text = "Sounds:"
label_settings = ExtResource("2_4q2cq")

[node name="#1" type="Button" parent="Developers/Sounds"]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 480.0
offset_bottom = 168.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "FilmCow"
alignment = 0

[node name="#2" type="Button" parent="Developers/Sounds"]
layout_mode = 0
offset_left = 480.0
offset_top = 128.0
offset_right = 864.0
offset_bottom = 168.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Nox_Sound"
alignment = 0

[node name="#3" type="Button" parent="Developers/Sounds"]
layout_mode = 0
offset_left = 96.0
offset_top = 160.0
offset_right = 480.0
offset_bottom = 200.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Tim"
alignment = 0

[node name="#4" type="Button" parent="Developers/Sounds"]
layout_mode = 0
offset_left = 480.0
offset_top = 160.0
offset_right = 864.0
offset_bottom = 200.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Leohpaz"
alignment = 0

[node name="Fonts" type="Control" parent="Developers"]
anchors_preset = 0
offset_top = 320.0
offset_right = 40.0
offset_bottom = 360.0

[node name="Label" type="Label" parent="Developers/Fonts"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 896.0
offset_bottom = 133.0
text = "Font:"
label_settings = ExtResource("2_4q2cq")

[node name="#1" type="Button" parent="Developers/Fonts"]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 480.0
offset_bottom = 168.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Sora Sagano"
alignment = 0

[node name="Close" type="Button" parent="Developers"]
layout_mode = 0
offset_left = 480.0
offset_top = 480.0
offset_right = 896.0
offset_bottom = 544.0
mouse_default_cursor_shape = 2
text = "Close"
alignment = 2

[node name="Languages panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 608.0

[node name="Label" type="Label" parent="Languages panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 896.0
offset_bottom = 96.0
text = "Choose the language:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="English" type="Button" parent="Languages panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 896.0
offset_bottom = 160.0
mouse_default_cursor_shape = 2
text = "English"

[node name="Russian" type="Button" parent="Languages panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 160.0
offset_right = 896.0
offset_bottom = 224.0
mouse_default_cursor_shape = 2
text = "Русский"

[node name="Close" type="Button" parent="Languages panel"]
layout_mode = 0
offset_left = 480.0
offset_top = 480.0
offset_right = 896.0
offset_bottom = 544.0
mouse_default_cursor_shape = 2
text = "Close"
alignment = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e866i")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Menu/Start the Game" to="." method="_on_start_the_game_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Developers" to="." method="_on_developers_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Social/GameJolt" to="." method="link" binds= ["https://gamejolt.com/games/marknpaul/833245"]]
[connection signal="pressed" from="Social/Itch_io" to="." method="link" binds= ["https://xolatgames.itch.io/marknpaul"]]
[connection signal="pressed" from="Social/GitHub" to="." method="link" binds= ["https://github.com/xolatgames/Mark-versus-Paul"]]
[connection signal="pressed" from="Social/Blogger" to="." method="link" binds= ["https://xolatgames.blogspot.com/"]]
[connection signal="pressed" from="Languages" to="." method="_on_languages_pressed"]
[connection signal="pressed" from="Developers/Music/#1" to="." method="link" binds= ["https://timbeek.com/"]]
[connection signal="pressed" from="Developers/Sounds/#1" to="." method="link" binds= ["https://filmcow.itch.io/"]]
[connection signal="pressed" from="Developers/Sounds/#2" to="." method="link" binds= ["https://nox-sound.itch.io/"]]
[connection signal="pressed" from="Developers/Sounds/#3" to="." method="link" binds= ["https://timothyadan.itch.io/"]]
[connection signal="pressed" from="Developers/Sounds/#4" to="." method="link" binds= ["https://leohpaz.itch.io/"]]
[connection signal="pressed" from="Developers/Fonts/#1" to="." method="link" binds= ["http://www.dotcolon.net/"]]
[connection signal="pressed" from="Developers/Close" to="." method="_on_close_developers_pressed"]
[connection signal="pressed" from="Languages panel/English" to="." method="changeLanguage" binds= ["en"]]
[connection signal="pressed" from="Languages panel/Russian" to="." method="changeLanguage" binds= ["ru"]]
[connection signal="pressed" from="Languages panel/Close" to="." method="_on_close_pressed"]
